# airflow

./: README.md  exemplo_01.py  pyproject.toml
frontend/: exemplo_04.py
frontend/pipeline/: pipeline.py
