[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["gabriel-garciae <eng.gabrielgevangelista@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.5,<3.13"
apache-airflow = "^2.10.2"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
